Show Initial for sender who has no profile image. Fix profile image not centered. Add “Add” Button bottom right. Add apps icon next to profile image.

--- a/app.css
+++ b/app.css
@@ -10,6 +10,15 @@ box-shadow: 0.5px 0px 1px 0.5px rgba(0,0,0,0.75);
 
 core-drawer-panel:not[narrow] drawer{
 }
+.letter {
+	border-radius: inherit;
+	width: 100%;
+	height: 100%;
+	transition: opacity 200ms ease-in-out 100ms;
+	will-change: opacity;
+	text-transform: uppercase;
+}
+
 .avatar{
 	width:40px;
 	height:40px;
@@ -27,7 +36,12 @@ core-toolbar{
 	background-color: #e5e5e5;
 	font-family: sans-serif;
 }
-
+.thread-name{
+	padding-bottom:30px;font-weight: bold;
+}
+.thread-subject{
+	padding-top:10xp;padding-bottom:15px;font-size:14px;font-weight: bold;
+}
 core-list .row{
 	height:80px;
 	background-color: white;
@@ -51,7 +65,11 @@ core-list .row{
 	-moz-box-shadow: 0px 0.5px 1px 0.5px rgba(0,0,0,0.75);
 	box-shadow: 0px 0.5px 1px 0.5px rgba(0,0,0,0.75);
 }
-
+.down-right-button{
+	position:absolute;
+	bottom:20px;
+	right:20px;
+}
 
 
 .content{
